[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "CalculateVoronoiStatistics"
version = "2023.0"
description = "Generates a histogram of the N most frequent Voronoi motifs."
keywords = ["ovito", "python-modifier"]
authors = [{name = "Constanze Kalcher", email = "kalcher@ovito.org"}]
maintainers = [{name = "OVITO GmbH", email = "support@ovito.org"}]
license = {text = "MIT License"}
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "ovito >= 3.9.1", 
    "numpy >= 1.22",
]

[project.urls]
repository = "https://github.com/ckalcher/CalculateVoronoiStatistics.git"

[project.entry-points.'OVITO.Modifier']
"Generate Voronoi Statistics Histogram" = "CalculateVoronoiStatistics:CalculateVoronoiStatistics"

[tool.setuptools.packages.find]
where = ["src"]